# infragraph

./: .gitignore  404.html  LICENSE  Makefile  README.md  build.py  generate.py  index.html  openapi.html  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: workflow.yml
annotate/: index.html
api/: api.yaml  info.yaml
artifacts/: infra.proto  infragraph.proto  infraph.proto  openapi.yaml
background/: index.html
blueprints/: index.html
cli/: index.html
create/: index.html
docs/: CNAME  generate_yaml.py  mkdocs.yml  openapi.html
docs/content/: mkdocs.yml
docs/content/docs/: index.md
docs/src/: CNAME  annotate.md  background.md  blueprints.md  cli.md  create.md  ecosystem.md  examples.md  index.md  model.md  openapi.html  overview.md  schema.md  unused.md  version.md
docs/src/examples/: asymmetric-device.yaml  cx5.py  dgxa100.py  dgxa100.yaml  generic-server.yaml  hierarchical-device.yaml  server.py  two-tier-clos-fabric-infrastructure.yaml  two-tier-clos-fabric-server.yaml  two-tier-clos-fabric-switch.yaml
ecosystem/: index.html
examples/: cx5.yaml  dgxa100.yaml  hierarchical-device.yaml  index.html  scaleup-scaleout.yaml  symmetric-device.yaml  two-tier-clos-fabric-server.yaml
model/: index.html
models/: annotation.yaml  common.yaml  component.yaml  device.yaml  edge.yaml  example.yaml  graph.yaml  infrastructure.yaml  instance.yaml  instances.yaml  inventory.yaml  link.yaml  query.yaml  request.yaml
print_page/: index.html
schema/: annotation.yaml  api.yaml  example.yaml  graph.yaml  index.html  info.yaml  query.yaml
search/: search_index.json
src/: convert_nb_to_script.py  infragraph_service.py
src/infragraph/: __main__.py  blueprint_handler.py  cx5.py  dgx.py  infragraph.proto  infragraph_service.py  server.py  switch.py
src/infragraph/blueprints/: rack_fabric.py  single_tier_fabric.py
src/infragraph/blueprints/devices/: ironwood_rack.py
src/infragraph/blueprints/devices/amd/: mi300x.py
src/infragraph/blueprints/devices/cisco/: ucs_c88_5A_m8.py
src/infragraph/blueprints/devices/dell/: poweredge_xe9680.py  z9864f_on.py
src/infragraph/blueprints/devices/nvidia/: cx5.py  dgx.py
src/infragraph/blueprints/fabrics/: clos_fat_tree_fabric.py  closfabric.py  dragonfly_fabric.py  hybrid_debruijn_fabric.py  multi_host_debruijn_fabric.py  single_tier_fabric.py
src/infragraph/blueprints/fabrics/single_tier/: single_tier_fabric.py
src/infragraph/blueprints/single_tier/: single_tier_fabric.py
src/infragraph/mininet_simulation/: mininet.py
src/infragraph/notebooks/: lstopo_translate.ipynb  lstopo_translate.py  nccl_translate.py  translator.ipynb
src/infragraph/translators/: lstopo_translator.py  nccl_translator.py  tool_handler.py  translator_handler.py
src/infragraph/visualizer/: visualize.py
src/infragraph/visualizer/frontend/: index.html
src/tests/: README.md  conftest.py  test_annotations.py  test_composability.py  test_devices.py  test_expand_node_string.py  test_graph_annotations.py  test_graph_query.py  test_infrastructure.py  test_ipaddress_annotations.py  test_nic_annotations.py  test_rank_annotations.py  test_shortest_path.py
src/tests/test_blueprints/: test_cisco.py  test_clos_fat_tree_fabric.py  test_devices.py  test_dragonfly.py  test_hybrid_debruijn_fabric.py  test_mi300x.py  test_multi_host_debruijn_fabric.py  test_rack_fabric.py  test_single_tier_fabric.py  test_xe9680.py  test_xe9680L.py  test_xe9685L.py  test_z9864f_on.py
src/tests/test_translators/: test_lstopo_translator.py  test_nccl_translator.py
src/tests/test_translators/mock_data/: NVIDIA-DGX2H-2pa24co+16nvml+1nvswitch+10ib.xml  supermicro.xml
src/tests/test_translators/resources/: dgx_a100_nccl_topo.xml
src/tests/test_visualizer/: test_visualizer.py
src/tests/test_visualizer/mock_data/: SYS-221H-TNR.json
tests/: conftest.py  test_device_graph.py  test_edge_generation.py  test_edges.py  test_service.py  test_validation.py
unused/: index.html
validation/: index.html
version/: index.html
yaml/: closfabric.yaml  cx5.yaml  cx5_100gbe.yaml  dgx.yaml  dgx_cx5_nic.yaml  dgx_cx5_qsfp_composed.yaml  dgx_h100.yaml  server.yaml  switch.yaml
(+12 files in other folders)
