[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "**/*",
    "!pyproject.toml",
    "!README.md",
    "!artifacts/infragraph/*.py",
    "!tests/*.py",
    "!docs/src/examples/*.py",
]

[tool.hatch.build.sources]
"artifacts/infragraph" = "infragraph"
"tests" = "infragraph/tests"
"docs/src/examples" = "infragraph/examples"

[project]
name = "infragraph"
version = "0.1.0"
description = "Infrastructure as a Graph"
requires-python = ">=3.8"
dependencies = [
    "networkx",
    "semantic_version",
]
authors = [
    {name = "TBD", email = "tbd@infragraph.org"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["infrastructure", "graph", "chakra", "astrasim"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]