[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.sources]
"artifacts/infragraph" = "infragraph"
"src/infragraph" = "infragraph"
"src/tests" = "infragraph/tests"
"artifacts/*.*" = "infragraph/docs"

[tool.hatch.build.targets.sdist]
exclude = [
    "**/*",
    "!pyproject.toml",
    "!README.md",
    "!artifacts/infragraph/*.py",
    "!artifacts/openapi.yaml",
    "!artifacts/openapi.html",
    "!artifacts/infragraph.proto",
    "!src/infragraph/*.py",
    "!src/tests/*.py",
]

[tool.hatch.build.targets.wheel.sources]
"artifacts/infragraph" = "infragraph"
"src/**" = "infragraph"
"artifacts/*.*" = "infragraph/docs"

[tool.hatch.build.targets.wheel.force-include]
"artifacts/openapi.yaml" = "infragraph/docs/openapi.yaml"
"artifacts/openapi.html" = "infragraph/docs/openapi.html"
"artifacts/infragraph.proto" = "infragraph/docs/infragraph.proto"
"README.md" = "infragraph/docs/README.md"

[project]
name = "infragraph"
version = "0.1.0"
description = "Infrastructure as a Graph"
requires-python = ">=3.8"
dependencies = [
    "networkx",
    "semantic_version",
]
authors = [
    {name = "TBD", email = "tbd@infragraph.org"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["infrastructure", "graph", "chakra", "astrasim"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]