[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.sources]
"artifacts/infragraph" = "infragraph"
"src/infragraph" = "infragraph"
"src/tests" = "infragraph/tests"
"src/docs" = "infragraph/docs"

[tool.hatch.build.targets.sdist]
exclude = [
    "**/*",
    "!pyproject.toml",
    "!README.md",
    # "!artifacts/infragraph/*.py",
    # "!artifacts/openapi.yaml",
    # "!artifacts/openapi.html",
    # "!artifacts/infragraph.proto",
    "!src/infragraph/*.py",
    "!src/tests/*.py",
    "!src/docs/*.*",
    "!infragraph/*.py",
    "!infragraph/tests/*.py",
    "!infragraph/docs/*.*",
]

[tool.hatch.build.targets.sdist.force-include]
"src/docs/openapi.yaml" = "infragraph/docs/openapi.yaml"
"src/docs/openapi.html" = "infragraph/docs/openapi.html"
"src/docs/infragraph.proto" = "infragraph/docs/infragraph.proto"
"README.md" = "README.md"

[tool.hatch.build.targets.wheel.sources]
"src/**" = "infragraph"

[tool.hatch.build.targets.wheel.force-include]
"infragraph/docs/openapi.yaml" = "infragraph/docs/openapi.yaml"
"infragraph/docs/openapi.html" = "infragraph/docs/openapi.html"
"infragraph/docs/infragraph.proto" = "infragraph/docs/infragraph.proto"
"README.md" = "infragraph/docs/README.md"

[project]
name = "infragraph"
version = "0.1.0"
description = "Infrastructure as a Graph"
requires-python = ">=3.8"
dependencies = [
    "networkx",
    "semantic_version",
]
authors = [
    {name = "TBD", email = "tbd@infragraph.org"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["infrastructure", "graph", "chakra", "astrasim"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]